5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4165/executions/1674_1880.log
== TEST (2019-04-30 10:51:24) 
-- CODE:
m = int(input("numero do mes:"))

if(m>o)and(m<13)
	if(m==1):
		print("janeiro")
	elif(m==2):
		print("fevereiro")
	elif(m==3):
		print("marco")
	elif(m==4):
		print("abril")
	elif(m==5):
		print("maio")
	elif(m==6):
		print("junho")
	elif(m==7):
		print("julho")
	elif(m==8):
		print("agosto")
	elif(m==9):
		print("setembro")
	elif(m==10):
		print("outubro")
	elif(m==11):
		print("novembro")
	elif(m==12):
		print("dezembro")
else:
	print("numero de mes invalido")

-- ERROR:
File "XXXX", line 3
    if(m>o)and(m<13)
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:51:41) 
-- CODE:
m = int(input("numero do mes:"))

if(m>o)and(m<13):
	if(m==1):
		print("janeiro")
	elif(m==2):
		print("fevereiro")
	elif(m==3):
		print("marco")
	elif(m==4):
		print("abril")
	elif(m==5):
		print("maio")
	elif(m==6):
		print("junho")
	elif(m==7):
		print("julho")
	elif(m==8):
		print("agosto")
	elif(m==9):
		print("setembro")
	elif(m==10):
		print("outubro")
	elif(m==11):
		print("novembro")
	elif(m==12):
		print("dezembro")
else:
	print("numero de mes invalido")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if(m>o)and(m<13):
NameError: name 'o' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:52:06) 
-- CODE:
m = int(input("numero do mes:"))

if(m>0)and(m<13):
	if(m==1):
		print("janeiro")
	elif(m==2):
		print("fevereiro")
	elif(m==3):
		print("marco")
	elif(m==4):
		print("abril")
	elif(m==5):
		print("maio")
	elif(m==6):
		print("junho")
	elif(m==7):
		print("julho")
	elif(m==8):
		print("agosto")
	elif(m==9):
		print("setembro")
	elif(m==10):
		print("outubro")
	elif(m==11):
		print("novembro")
	elif(m==12):
		print("dezembro")
else:
	print("numero de mes invalido")

-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 10:52:12) 
-- CODE:
m = int(input("numero do mes:"))

if(m>0)and(m<13):
	if(m==1):
		print("janeiro")
	elif(m==2):
		print("fevereiro")
	elif(m==3):
		print("marco")
	elif(m==4):
		print("abril")
	elif(m==5):
		print("maio")
	elif(m==6):
		print("junho")
	elif(m==7):
		print("julho")
	elif(m==8):
		print("agosto")
	elif(m==9):
		print("setembro")
	elif(m==10):
		print("outubro")
	elif(m==11):
		print("novembro")
	elif(m==12):
		print("dezembro")
else:
	print("numero de mes invalido")

-- EXECUTION TIME:
0.172716
-- TEST CASE 1:
---- input:
4
---- correct output:
abril
---- user output:
abril
-- TEST CASE 2:
---- input:
5
---- correct output:
maio
---- user output:
maio
-- TEST CASE 3:
---- input:
16
---- correct output:
numero de mes invalido
---- user output:
numero de mes invalido
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
